docs : fix response payload
